--- a/gradnew.css
+++ b/gradnew.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #000E64;
+  background-color: #004D9F;
   overflow: hidden;
 }
 
